*restructures stylesheets and components

--- a/website/docs/components/checkbox.mdx
+++ b/website/docs/components/checkbox.mdx
@@ -81,7 +81,7 @@ You can only use either the label property or children.
 />
 ```
 
-### Checkbox with children
+### Custom content
 <CheckboxBody/>
 
 &NewLine;
@@ -129,7 +129,7 @@ function Playground() {
       checked={value}
       toggleCheck={setValue}
       label={'Checkbox with the label prop'}
-      checkColor={'#0047CC'}
+      color={'#0047CC'}
       dark={false}
       name={'check-playground'}
     />
