* changes docs layout

--- a/docs/app/docs/components/button/page.mdx
+++ b/docs/app/docs/components/button/page.mdx
@@ -4,4 +4,8 @@ description: showcase and usage of the button component
 sidebarTitle: Button
 ---
 
+import DefaultButtons from "./_buttons";
+
 # Button
+
+<DefaultButtons/>
