* adds content for about doc entry

--- a/docs/app/about/page.mdx
+++ b/docs/app/about/page.mdx
@@ -1,1 +1,14 @@
-# ABOUT
+# About UI-Library
+
+This library comprises a set of reusable UI components designed for React-based applications. \
+Originally it was designed for personal projects, but you are welcome to integrate it into your projects as needed.
+
+If you have any suggestions or feedback feel free to open an issue over at [GitHub](https://github.com/HenrikBuesing/ui-library/issues)
+
+## Maintainers
+
+Currently, the project is maintained and developed by Henrik Büsing.
+
+## License
+
+The project is licensed under [the MIT license](https://github.com/HenrikBuesing/ui-library/main/LICENSE).
