* adds content for the input-decorator doc entry

--- a/docs/app/docs/components/input/page.mdx
+++ b/docs/app/docs/components/input/page.mdx
@@ -114,6 +114,7 @@ For more information go to the [inputDecorator](/docs/components/input-decorator
       kg/lbs
     </InputDecorator>
   </Input>
+  
   <Input label={'Outlined'} variant={'outlined'} defaultValue={'hello-world'}>
     <InputDecorator>
       .com
@@ -125,6 +126,7 @@ For more information go to the [inputDecorator](/docs/components/input-decorator
       kg/lbs
     </InputDecorator>
   </Input>
+  
   <Input label={'Basic'} variant={'basic'} defaultValue={'hello-world'}>
     <InputDecorator>
       .com
@@ -149,10 +151,7 @@ For more information go to the [inputDecorator](/docs/components/input-decorator
     <Table.Td>children</Table.Td>
     <Table.Td>`InputDecorator`</Table.Td>
     <Table.Td>-</Table.Td>
-    <Table.Td>
-      <p>Decorator for the input</p>
-      <p>⚠️ Only the `InputDecorator` component is allowed as a child.</p>
-    </Table.Td>
+    <Table.Td>Decorator for the input</Table.Td>
   </Table.Tr>
   <Table.Tr>
     <Table.Td>dark</Table.Td>
