* updates docs content

--- a/docs/app/docs/components/checkbox/page.mdx
+++ b/docs/app/docs/components/checkbox/page.mdx
@@ -3,4 +3,10 @@ title: Checkbox
 description: Showcase and usage guide of the checkbox component
 ---
 
+import DefaultCheck from './_checkbox';
+
 # Checkbox [WIP]
+
+The checkbox component is a UI element that allows users to select or deselect an option.
+
+<DefaultCheck/>
