--- a/docs/app/docs/components/page.mdx
+++ b/docs/app/docs/components/page.mdx
@@ -22,6 +22,10 @@ View all available components and learn how to use them.
     href="/docs/components/input"
   />
   <Cards.Card
+    title="InputDecorator"
+    href="/docs/components/input-decorator"
+  />
+  <Cards.Card
     title="Checkbox"
     href="/docs/components/checkbox"
   />
@@ -34,10 +38,6 @@ View all available components and learn how to use them.
 ## Data Display
 
 <Cards>
-  <Cards.Card
-    title="Icon"
-    href="/docs/components/icon"
-  />
   <Cards.Card
     title="Modal"
     href="/docs/components/modal"
