* adds content for the useContrastColor doc entry

--- a/docs/app/docs/hooks/contrast-color/page.mdx
+++ b/docs/app/docs/hooks/contrast-color/page.mdx
@@ -1,4 +1,22 @@
 ---
-title: UseContrastColor
+title: useContrastColor
 description: Showcase and usage guide of the useContrastColor hook
 ---
+
+# useContrastColor
+
+The `useContrastColor` function takes a hex color string as input and returns either `#000000` (black) or `#ffffff` (white),
+based on the contrast ratio of the hex color.
+
+## Parameters
+
+The function parameter, `hex`, requires A valid 3 or 6-character hexadecimal color code (e.g., #ABC, #AABBCC).
+
+## Usage Example
+
+```ts
+import {useContrastColor} from "@hbuesing/ui-library";
+
+const textColor = useContrastColor('#37EDDE');
+console.log(textColor); // Output: "#000000"
+```
